k8s-django.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: sample/django:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: django
---
kind: Service
apiVersion: v1
metadata:
  name: django-svc
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8000
      name: django
  type: NodePort
